k8s/all-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-services-ingress
  namespace: book-app
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/plugins: jwt-auth,rate-limit
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 5000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
          - path: /publishers
            pathType: Prefix
            backend:
              service:
                name: publisher-service
                port:
                  number: 5002
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5006
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 5005
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 5004
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 5010
          - path: /service-registry
            pathType: Prefix
            backend:
              service:
                name: service-registry
                port:
                  number: 5007
